--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.10.2",
-    "next": "14.1.0",
+    "bcrypt": "^5.1.1",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
