feat: adding email

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "next-auth": "^4.24.6",
     "react": "^18",
