--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
