--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
@@ -20,6 +21,8 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "react-toastify": "^10.0.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
