--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.5.0",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^20.11.22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
