--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-toastify": "^10.0.5",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
   },
