--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ POSTGRES_PASS=root
 POSTGRES_DB=checklist-thoth
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=Thoth@Checklist
+AWS_S3_BUCKET_NAME=
+AWS_S3_BUCKET_REGION=
+AWS_S3_BUCKET_ACCESS_KEY_ID=
+AWS_S3_BUCKET_ACCESS_KEY_SECRET=
