--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.51.0",
     "react-toastify": "^10.0.5",
     "slugify": "^1.6.6",
+    "swiper": "^11.1.3",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
   },
