--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.51.0",
     "react-toastify": "^10.0.5",
+    "sanitize-html": "^2.16.0",
     "slugify": "^1.6.6",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.2.2",
@@ -42,6 +43,7 @@
     "@types/node": "^20.11.22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sanitize-html": "^2.15.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
