--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.10.2",
+    "@vercel/analytics": "^1.5.0",
     "array-move": "^3.0.1",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
